# UACC

./: .cursorrules  .env.example  .gitignore  AGENTS.md  AGENTS_INTEGRATION.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  demo_runner.py  pyproject.toml  requirements.txt  uacc-mcp-run.bat  uacc-mcp.bat  uacc_aggressive_test.py  uacc_mcp_test_runner.py  uacc_mcp_usage_log.txt
.github/workflows/: ci.yml  publish.yml  test.yml
examples/: demo_grid.py  demo_text_map.py  open_notepad.py  practical_demo.py  web_search.py
tests/: test_action_executor.py  test_grid_encoder.py  test_new_features.py  test_text_map.py
uacc/: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  __init__.py  config.py  mcp.py  pyproject.toml  uacc-mcp-run.bat
uacc/.github/: PULL_REQUEST_TEMPLATE.md
uacc/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
uacc/actions/: artistic_painter.py  executor.py  human_mimicry.py  schema.py
uacc/agent/: __init__.py  controller.py  memory.py  planner.py  recovery.py  reflector.py  shortcuts.py  specialists.py  verifier.py
uacc/apps/: __init__.py  base.py  chrome.py  excel.py  explorer.py  outlook.py  registry.py
uacc/core/: __init__.py  accessibility.py  clipboard.py  element_finder.py  grid_encoder.py  ocr_engine.py  screen_capture.py  screen_diff.py  vision_detector.py  window_manager.py
uacc/examples/: demo_grid.py  demo_text_map.py  open_notepad.py  web_search.py
uacc/memory/: __init__.py  semantic_graph.py
uacc/models/: __init__.py  anthropic_adapter.py  hybrid_adapter.py  text_adapter.py  vision_adapter.py
uacc/safety/: __init__.py  classifier.py  gate.py
uacc/tasks/: __init__.py  manager.py
uacc/tests/: test_action_executor.py  test_grid_encoder.py  test_new_features.py  test_text_map.py
uacc/tools/: __init__.py  composer.py  registry.py
uacc/uacc/: __init__.py  config.py
uacc/uacc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
uacc/uacc/actions/: __init__.py  artistic_painter.py  executor.py  human_mimicry.py
uacc/uacc/agent/: controller.py  memory.py  specialists.py  verifier.py
uacc/uacc/core/: accessibility.py  element_finder.py  grid_encoder.py  ocr_engine.py  text_map.py  window_manager.py
uacc/uacc/models/: base_adapter.py  vision_adapter.py
uacc/uacc/web/: server.py
uacc/uacc/web/static/: index.css  index.html
uacc/uacc_mcp/: __init__.py  server.py  utils.py
uacc/web/: server.py
uacc/workflows/: __init__.py
uacc_mcp/: __init__.py  server.py  utils.py
