[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uacc"
version = "1.0.0"
description = "Universal AI Computer Control — Let any LLM control a computer with pixel-precise UI interactions"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "UACC Contributors", email = "chrisjaron99@gmail.com"}
]
keywords = [
    "mcp", "computer-control", "ai-agent", "ui-automation",
    "desktop-automation", "model-context-protocol", "llm-tools"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    "mss>=9.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pyautogui>=0.9.54",
    "pynput>=1.7",
    "pywinauto>=0.6.8 ; sys_platform == 'win32'",
    "pywinctl>=0.0.55",
    "easyocr>=1.7",
    "openai>=1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "scikit-image>=0.21",
    "mcp[cli]>=1.0",
    "psutil>=5.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "torch ; sys_platform == 'win32'",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/uacc-project/uacc"
Repository = "https://github.com/uacc-project/uacc"
Documentation = "https://github.com/uacc-project/uacc#readme"
Changelog = "https://github.com/uacc-project/uacc/blob/main/CHANGELOG.md"
Issues = "https://github.com/uacc-project/uacc/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "jinja2>=3.0",
]

[project.scripts]
uacc-mcp = "uacc_mcp.server:main"
uacc-ui = "uacc.web.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uacc*", "uacc_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    "uacc/web/static/*",
    "dist/*",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require network access (skipped by default)",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::FutureWarning",
]
addopts = "-m 'not network'"

[tool.coverage.run]
source = ["uacc", "uacc_mcp"]
omit = ["*/tests/*", "*/examples/*"]
